# dtuia

./: .gitignore  README.md  defect_patterns.py  main.py  pyproject.toml  repair_agent.py  test_single_repair.py
Data/: README.md  conftest.py  tester.py  tester2.py
Data/correct_python_programs/: bitcount.py  breadth_first_search.py  breadth_first_search_test.py  bucketsort.py  depth_first_search.py  depth_first_search_test.py  detect_cycle.py  detect_cycle_test.py  find_first_in_sorted.py  find_in_sorted.py  flatten.py  gcd.py  get_factors.py  hanoi.py  is_valid_parenthesization.py  kheapsort.py  knapsack.py  kth.py  lcs_length.py  levenshtein.py  lis.py  longest_common_subsequence.py  max_sublist_sum.py  mergesort.py  minimum_spanning_tree.py  minimum_spanning_tree_test.py  next_palindrome.py  next_permutation.py  node.py  pascal.py  possible_change.py  powerset.py  quicksort.py  reverse_linked_list.py  reverse_linked_list_test.py  rpn_eval.py  shortest_path_length.py  shortest_path_length_test.py  shortest_path_lengths.py  shortest_path_lengths_test.py  (+10 more)
Data/fixed_programs/: bitcount.py  breadth_first_search.py  bucketsort.py  depth_first_search.py  detect_cycle.py  find_first_in_sorted.py  find_in_sorted.py  flatten.py  format.md  gcd.py  get_factors.py  hanoi.py  is_valid_parenthesization.py  kheapsort.py  knapsack.py  kth.py  lcs_length.py  levenshtein.py  lis.py  longest_common_subsequence.py  max_sublist_sum.py  mergesort.py  minimum_spanning_tree.py  next_palindrome.py  next_permutation.py  pascal.py  possible_change.py  powerset.py  quicksort.py  rpn_eval.py  (+11 more)
(+95 files in other folders)
